--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
    
   
     .image {
@@ -13,6 +14,25 @@
       background-position: center;
       margin-bottom: 5px;
       border: 0.5px solid black;
+    }
+
+    .custom-button {
+      width: 80%;
+      opacity: 0.7;
+      position: absolute;
+      top: 255px;
+      display: none;
+    } 
+
+    &:hover {
+      .image {
+        opacity: 0.8;
+      }
+
+      .custom-button {
+        opacity: 0.85;
+        display: flex;
+      }
     }
   
     .collection-footer {
