--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,17 @@
       margin-left: auto;
       font-size: 36px;
     }
+
+    .button {
+      margin-left: auto;
+      margin-top: 40px;
+    }
+
+    .test-warning {
+      text-align: center;
+      margin-top: 40px;
+      margin-bottom: 10px;
+      font-size: 15px;
+      color: red;
+    }
   }
